# Mineclone

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
ci/: lsan.supp
cmake/: Sanitizers.cmake
docs/: VERIFY.md
shaders/: basic.frag  basic.vert  debug_line.frag  debug_line.vert  voxel.frag  voxel.vert
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  main.cpp
src/app/: AppInput.cpp  AppInput.h  AppMode.cpp  AppMode.h  GameState.h  MenuModel.h
src/core/: Assert.h  Cli.cpp  Cli.h  Profiler.cpp  Profiler.h  Sha256.cpp  Sha256.h  ThreadSafeQueue.h  Verify.cpp  Verify.h  WorkerPool.cpp  WorkerPool.h  WorldTest.cpp  WorldTest.h
src/game/: Player.cpp  Player.h
src/math/: Frustum.cpp  Frustum.h  Plane.cpp  Plane.h
src/persistence/: ChunkFormat.h  ChunkStorage.cpp  ChunkStorage.h
src/physics/: VoxelCollision.cpp  VoxelCollision.h
src/renderer/: DebugDraw.cpp  DebugDraw.h  RenderTest.cpp  RenderTest.h
src/voxel/: BlockEdit.cpp  BlockEdit.h  BlockFaces.h  BlockId.h  Chunk.cpp  Chunk.h  ChunkBounds.h  ChunkCoord.h  ChunkJobs.h  ChunkManager.cpp  ChunkManager.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMesher.cpp  ChunkMesher.h  ChunkRegistry.cpp  ChunkRegistry.h  ChunkStreaming.cpp  ChunkStreaming.h  LightData.h  Raycast.cpp  Raycast.h  VoxelCoords.h  WorldGen.cpp  WorldGen.h
textures/: README.md
